[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPauseMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="MainPauseMenu"]
scale = Vector2( 0.444444, 1 )
color = Color( 0.243137, 0.243137, 0.243137, 0.878431 )
polygon = PoolVector2Array( 576, 0, 576, 1080, 0, 1080, 0, 0 )

[node name="Resume" type="Button" parent="MainPauseMenu"]
margin_top = 466.0
margin_right = 256.0
margin_bottom = 526.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MainPauseMenu"]
margin_top = 530.0
margin_right = 256.0
margin_bottom = 590.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MainPauseMenu"]
margin_top = 594.0
margin_right = 256.0
margin_bottom = 654.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="OptionMenu"]
scale = Vector2( 0.133333, 1 )
color = Color( 0.243137, 0.243137, 0.243137, 0.878431 )
polygon = PoolVector2Array( 0, 0, 1920, 0, 1920, 1080, 0, 1080 )

[node name="OptionsContainer" type="VBoxContainer" parent="OptionMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -639.0
margin_top = -532.0
margin_right = -128.0
margin_bottom = 532.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="OptionMenu/OptionsContainer"]
position = Vector2( -65, -8 )
scale = Vector2( 1.11111, 1 )
color = Color( 0.658824, 0.658824, 0.658824, 0.784314 )
polygon = PoolVector2Array( 576, 0, 576, 1080, 0, 1080, 0, 0 )

[node name="Fullscreen" type="HBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 441.0
margin_right = 511.0
margin_bottom = 465.0
alignment = 1

[node name="FulscreenLabel" type="Label" parent="OptionMenu/OptionsContainer/Fullscreen"]
margin_left = 206.0
margin_top = 5.0
margin_right = 276.0
margin_bottom = 19.0
text = "Fullscreen:"

[node name="Fullscreen" type="CheckBox" parent="OptionMenu/OptionsContainer/Fullscreen"]
margin_left = 280.0
margin_right = 304.0
margin_bottom = 24.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsync" type="HBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 469.0
margin_right = 511.0
margin_bottom = 493.0
alignment = 1

[node name="VSyncLabel" type="Label" parent="OptionMenu/OptionsContainer/Vsync"]
margin_left = 218.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 19.0
text = "V-Sync:"

[node name="VSync" type="CheckBox" parent="OptionMenu/OptionsContainer/Vsync"]
margin_left = 268.0
margin_right = 292.0
margin_bottom = 24.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoF" type="HBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 497.0
margin_right = 511.0
margin_bottom = 521.0
alignment = 1

[node name="DoFLabel" type="Label" parent="OptionMenu/OptionsContainer/DoF"]
margin_left = 194.0
margin_top = 5.0
margin_right = 288.0
margin_bottom = 19.0
text = "Depth of Field:"

[node name="DoF" type="CheckBox" parent="OptionMenu/OptionsContainer/DoF"]
margin_left = 292.0
margin_right = 316.0
margin_bottom = 24.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brightness" type="VBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 525.0
margin_right = 511.0
margin_bottom = 555.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrightnessLabel" type="Label" parent="OptionMenu/OptionsContainer/Brightness"]
margin_right = 511.0
margin_bottom = 14.0
text = "Brightness:"
align = 1
valign = 1

[node name="Brightness" type="HScrollBar" parent="OptionMenu/OptionsContainer/Brightness"]
margin_top = 18.0
margin_right = 511.0
margin_bottom = 30.0
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Contrast" type="VBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 559.0
margin_right = 511.0
margin_bottom = 589.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContrastLabel" type="Label" parent="OptionMenu/OptionsContainer/Contrast"]
margin_right = 511.0
margin_bottom = 14.0
text = "Contrast:"
align = 1
valign = 1

[node name="Contrast" type="HScrollBar" parent="OptionMenu/OptionsContainer/Contrast"]
margin_top = 18.0
margin_right = 511.0
margin_bottom = 30.0
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Saturation" type="VBoxContainer" parent="OptionMenu/OptionsContainer"]
margin_top = 593.0
margin_right = 511.0
margin_bottom = 623.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaturationLabel" type="Label" parent="OptionMenu/OptionsContainer/Saturation"]
margin_right = 511.0
margin_bottom = 14.0
text = "Saturation:"
align = 1
valign = 1

[node name="Saturation" type="HScrollBar" parent="OptionMenu/OptionsContainer/Saturation"]
margin_top = 18.0
margin_right = 511.0
margin_bottom = 30.0
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="Back" type="Button" parent="OptionMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -56.0
margin_right = 256.0
text = "<= Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="OptionMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -112.0
margin_right = 256.0
margin_bottom = -56.0
text = "Save Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="OptionMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 39.0
margin_top = -7.0
margin_right = 98.0
margin_bottom = 7.0
rect_scale = Vector2( 3, 3 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainPauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MainPauseMenu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainPauseMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="toggled" from="OptionMenu/OptionsContainer/Fullscreen/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="OptionMenu/OptionsContainer/Vsync/VSync" to="." method="_on_VSync_toggled"]
[connection signal="toggled" from="OptionMenu/OptionsContainer/DoF/DoF" to="." method="_on_DoF_toggled"]
[connection signal="value_changed" from="OptionMenu/OptionsContainer/Brightness/Brightness" to="." method="_on_Brightness_value_changed"]
[connection signal="value_changed" from="OptionMenu/OptionsContainer/Contrast/Contrast" to="." method="_on_Contrast_value_changed"]
[connection signal="value_changed" from="OptionMenu/OptionsContainer/Saturation/Saturation" to="." method="_on_Saturation_value_changed"]
[connection signal="pressed" from="OptionMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="OptionMenu/Save" to="." method="_on_Save_pressed"]
